Fix warnings and align some elements on the UI

--- a/src/client-app/my-app/src/common/layouts/base.scss
+++ b/src/client-app/my-app/src/common/layouts/base.scss
@@ -12,8 +12,7 @@ $primary-color: #3f50b5;+
 
 .side-nav {
     background-color: $primary-color;
-    border-radius: 5rem;
-    margin-left: 1rem;
+    border-radius: 3rem;
 }
 
 .message-feed {
